<resources>
    <string name="app_name">Tripminder</string>
    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_app_id">827080291160952</string>
    <string name="fb_login_protocol_scheme">fb827080291160952</string>
    <!--<string name="facebook_application_id" translatable="false">YOUR_APP_ID</string>-->
    <!--<string name="facebook_login_protocol_scheme" translatable="false">fbYOUR_APP_ID</string>-->
    <!-- Twitter consumer key and secret -->
    <string name="twitter_consumer_key" translatable="false">YOUR_CONSUMER_KEY</string>
    <string name="twitter_consumer_secret" translatable="false">YOUR_CONSUMER_SECRET</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="trip_name">Name</string>
    <string name="next">next</string>
    <string name="title_activity_home_navigation">HomeNavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="trips">Past Trips</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="sync">Sync</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="privateInformation">Private Information</string>
    <string name="password">Password</string>
    <string name="email">E-mail</string>
    <string name="done">Done</string>
    <string name="trNotes">Notes</string>
    <string name="notes">Notes</string>
    <string name="tripNotes">Notes</string>
    <string name="saveNotes">Save</string>
    <string name="roundtrip">Round Trip</string>
    <string name="trip_notes">Trip Notes</string>
    <string name="start_point">Start Point</string>
    <string name="end_point">End Point</string>
    <string name="rounded_trip">Rounded Trip</string>
    <string name="you_have_arrived_at_you_destination">You have arrived at you destination</string>
    <string name="return_now">return Now</string>
    <string name="lets_go">Let\'s go</string>
    <string name="ok">Ok</string>
    <string name="later">Later</string>
    <string name="when_do_you_want_to_return">When do you want to return?</string>
    <string name="go_to_home_screen">Go to home screen</string>
    <string name="no_notes_were_added">No Notes were added</string>
    <string name="no_trips_yet">No trips yet</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="tripName">Trip Name</string>
    <string name="tripDate">Trip date</string>
    <string name="trip_date">Date</string>
    <string name="trip_time">Time</string>

</resources>


