<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_trips"
            android:icon="@drawable/ic_menu_trip"
            android:title="@string/trips" />
        <item
            android:id="@+id/nav_sync"
            android:icon="@drawable/ic_menu_sync"
            android:title="@string/sync" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_logout"
            android:title="@string/logout" />

    </group>
</menu>
