<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fSettings"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="218dp"
    android:layout_marginLeft="2pt"
    android:layout_marginTop="10pt"
    android:weightSum="6"
    tools:context=".fragments.SettingsFragment">

    <TextView
        android:id="@+id/privateInfoTxt"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center_vertical"
        android:text="@string/privateInformation"
        android:textSize="8pt"

        android:textStyle="bold" />

    <TextView
        android:id="@+id/emailTxt"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:text="@string/email" />

    <EditText
        android:id="@+id/emailField"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5" />

    <TextView
        android:id="@+id/passwordTxt"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:text="@string/password" />

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:ems="10"
        android:inputType="textPassword" />

</LinearLayout>