<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddTripActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_trip_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_trip_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/trip_name" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="on"
            app:layout_constraintBottom_toTopOf="@+id/view"
            app:layout_constraintStart_toStartOf="@+id/til_trip_name"
            app:layout_constraintTop_toBottomOf="@+id/til_trip_name" />

        <TextView
            android:id="@+id/tv_date_selected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="@+id/textView" />

        <ImageButton
            android:id="@+id/btn_trip_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:minHeight="42dp"
            android:minWidth="42dp"
            android:src="@android:drawable/ic_lock_idle_alarm"
            app:layout_constraintStart_toEndOf="@+id/btn_trip_date"
            app:layout_constraintTop_toBottomOf="@+id/til_trip_name" />

        <ImageButton
            android:id="@+id/btn_trip_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:minHeight="42dp"
            android:minWidth="42dp"
            android:src="@android:drawable/ic_input_add"
            app:layout_constraintStart_toEndOf="@+id/tv_date_selected"
            app:layout_constraintTop_toBottomOf="@+id/til_trip_name" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:alpha="0.3"
            android:background="@color/colorAccent"
            app:layout_constraintTop_toBottomOf="@+id/btn_trip_date" />

        <AutoCompleteTextView
            android:id="@+id/tv_end_point"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/start_point"
            app:layout_constraintTop_toBottomOf="@+id/tv_start_point" />

        <AutoCompleteTextView
            android:id="@+id/tv_start_point"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/end_point"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:alpha="0.3"
            android:background="@color/colorAccent"
            app:layout_constraintTop_toBottomOf="@+id/tv_end_point" />

        <TextView
            android:id="@+id/tv_trip_notes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/trip_notes"
            app:layout_constraintBottom_toBottomOf="@+id/btn_add_note"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btn_add_note" />

        <ImageButton
            android:id="@+id/btn_add_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:src="@android:drawable/ic_input_add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view2" />


        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_add_note" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/done"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_notes" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>